fix search box z-index

--- a/wp-content/themes/MacCenter/css/custom.css
+++ b/wp-content/themes/MacCenter/css/custom.css
@@ -1004,7 +1004,7 @@ left:0px;
 position:static !important;
 }
 #socket{
-z-index:0;
+z-index:10000;
 }
 .prod-img{width:100% !important;}
 div ul.product_list_widget{
